--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "pinia": "^3.0.4",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "cypress": "^15.6.0",
+    "gh-pages": "^6.3.0",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
