--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,14 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Run Cypress Tests
+        uses: cypress-io/github-action@v6
+        with:
+          start: npm run dev
+          wait-on: 'https://nknikhikasar.github.io/To-Do-Manager/'
+          browser: chrome
+          config: video=false
+
       - name: Build Project
         run: npm run build
 
