Update branch references in CI/CD workflows to use array syntax for consistency

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -3,7 +3,7 @@ name: CI/CD - Build, Test, and Deploy Vue App
 on:
   push:
     branches:
-      - main
+      - [staging]
 
 permissions:
   contents: write
