--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -3,7 +3,7 @@ name: CI/CD - Build, Test, and Deploy Vue App
 on:
   push:
     branches:
-      - main
+      - [development]
 
 permissions:
   contents: write
