--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -2,8 +2,7 @@ name: CI/CD - Build, Test, and Deploy Vue App
 
 on:
   push:
-    branches:
-      - [staging]
+    branches: [staging]
 
 permissions:
   contents: write
