--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Set environment
+        run: echo "APP_ENV=development" >> $GITHUB_ENV
+
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v6
         with:
