--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,7 +2,7 @@ name: CI/CD - Build, Test, and Deploy Vue App
 
 on:
   push:
-    branches: [main]
+    branches: [production]
 
 permissions:
   contents: write
