Update wait-on URLs in CI/CD workflows for Cypress tests to include environment-specific paths

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -31,7 +31,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           start: npm run dev
-          wait-on: 'https://nknikhikasar.github.io/To-Do-Manager/'
+          wait-on: 'https://nknikhikasar.github.io/To-Do-Manager/dev/'
           browser: chrome
           config: video=false
 
