Add branch selection input to manual deployment workflow

--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -3,6 +3,15 @@ name: Deploy Manually
 on:
   workflow_dispatch:
     inputs:
+      branch:
+        description: "Select branch to deploy"
+        required: true
+        type: choice
+        options:
+          - main
+          - staging
+          - development
+
       environment:
         description: "Select environment"
         required: true
