--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -31,7 +31,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           start: npm run dev
-          wait-on: 'https://nknikhikasar.github.io/To-Do-Manager/stage/'
+          wait-on: 'http://localhost:5173'
           browser: chrome
           config: video=false
 
