--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -44,3 +44,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           destination_dir: dev
+          keep_files: true
