--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -44,3 +44,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           destination_dir: stage
+          keep_files: true
