--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: CI/CD - Build, Test, and Deploy Vue App
+name: 🚀 Production - Build, Test, Deploy
 
 on:
   push:
@@ -23,22 +23,22 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
-      
-      - name: Set environment
+
+      - name: Set environment (production)
         run: echo "APP_ENV=production" >> $GITHUB_ENV
 
-      - name: Run Cypress Tests
+      - name: Run Cypress Tests (local dev server)
         uses: cypress-io/github-action@v6
         with:
           start: npm run dev
-          wait-on: 'https://nknikhikasar.github.io/To-Do-Manager/'
+          wait-on: 'http://localhost:5173'
           browser: chrome
           config: video=false
 
       - name: Build Project
         run: npm run build
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages → root /
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
