--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,4 +1,4 @@
-name: CI/CD - Build, Test, and Deploy Vue App
+name: 🚀 Development - Build, Test, Deploy
 
 on:
   push:
@@ -24,23 +24,24 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Set environment
+      - name: Set environment (development)
         run: echo "APP_ENV=development" >> $GITHUB_ENV
 
-      - name: Run Cypress Tests
+      - name: Run Cypress Tests (local dev server)
         uses: cypress-io/github-action@v6
         with:
           start: npm run dev
-          wait-on: 'https://nknikhikasar.github.io/To-Do-Manager/dev/'
+          wait-on: 'http://localhost:5173'
           browser: chrome
           config: video=false
 
       - name: Build Project
         run: npm run build
 
-      - name: Deploy to GitHub Pages (/dev folder)
+      - name: Deploy to GitHub Pages → /dev
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           destination_dir: dev
+          keep_files: true
