--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@cypress/vite-dev-server": "^7.0.1",
+    "@cypress/vue": "^6.0.2",
     "@vitejs/plugin-vue": "^6.0.1",
     "cypress": "^15.6.0",
     "gh-pages": "^6.3.0",
